# Finance_AI

./: README.md  analysis.md
finance_ai_control/: .gitignore  analysis.md  pyproject.toml
finance_ai_control/knowledge/: user_preference.txt
finance_ai_control/src/finance_ai_control/: crew.py  main.py
finance_ai_control/src/finance_ai_control/config/: agents.yaml  tasks.yaml
finance_ai_control/src/finance_ai_control/tools/: custom_tool.py
finance_ai_control/tests/: convert_to_PDF.py  extract_text.py
